--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apps</title>
+</head>
+<body>
+    <h3>Gjesteparkering</h3>
+    <div>Alt på ditt eget ansvar. Bruk offisiell nettside for å verifisere.</div>
+</body>
+</html>
