--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Apps</title>
 </head>
 <body>
+    <div>
     <h3>Gjesteparkering</h3>
     <div>Alt på ditt eget ansvar. Bruk offisiell nettside for å verifisere.</div>
+        </div>
+    <div>
+    <h3>SvgPark</h3>
+    <div>Viser ledige parkeringsplasser  i Stavanger.</div>
+        <div>http://opencom.no er kilden.</div>
+        </div>
+
+    <div>
+        Ta kontakt med stian.ravndal@outlook.com, om det er noe man lurer på.
+    </div>
 </body>
 </html>
