--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <hr />
     <div>
-        Ta kontakt med stian.ravndal@outlook.com, om det er noe man lurer på.
+        Ta kontakt med stian.ravndal@outlook.com, om det er noe man lurer på eller trenger hjelp.
     </div>
 </body>
 </html>
