--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <div>
         Ta kontakt med stian.ravndal@outlook.com, om det er noe man lurer på eller trenger hjelp.
     </div>
+    <div>For english press here: <a href="/index_en.html">English version</a></div>
 </body>
 </html>
